--- a/numhask-bench/numhask-bench.cabal
+++ b/numhask-bench/numhask-bench.cabal
@@ -52,6 +52,7 @@ executable numhask-bench
       base >=4.7 && <5
     , hmatrix
     , matrix
+    , mwc-random
     , numhask
     , numhask-array
     , numhask-prelude >= 0.3 && < 0.4
@@ -62,4 +63,6 @@ executable numhask-bench
     , text
     , vector
     , dense-linear-algebra
+    , criterion
+    , perf-criterion
   default-language: Haskell2010
