--- a/numhask-bench/numhask-bench.cabal
+++ b/numhask-bench/numhask-bench.cabal
@@ -63,6 +63,7 @@ executable numhask-bench
     , text
     , vector
     , dense-linear-algebra
-    , criterion
-    , perf-criterion
+    , criterion == 1.5.5.0
+    -- , perf-criterion
+    -- , criterion-measurement
   default-language: Haskell2010
